[package]
name = "dev_environment_launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devenv"
path = "src/main.rs"

[dependencies]
# To set up a basic command-line interface (CLI)
structopt = "0.3"
structopt-derive = "0.4"
dialoguer = "0.11.0"
# To handle config files
toml = "0.8.15"
config = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"